--- a/index.html
+++ b/index.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Prototype v2</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="grid-container">
-        <div id="logo">
-            <h1>Logo.</h1>
-        </div>
-        <nav id="navbar">
-            <ul>
-                <li><a href="./index.html" class="active">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="./contacts.html">Contacts</a></li>
-            </ul>
-        </nav>
-        <div id="pin">
-            
-        </div>
-        <section id="main">
-            <h1>Hero</h1>
-        </section>
-        <section id="aside">
-            <img src="./images/meback.jpg" alt="">
-        </section>
+      <div id="logo">
+        <h1></h1>
+      </div>
+      <nav id="navbar">
+        <ul>
+          <li><a href="./index.html" class="active">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="./contacts.html">Contacts</a></li>
+        </ul>
+      </nav>
+      <div id="pin"></div>
+      <section id="main">
+        <h1>Hero</h1>
+      </section>
+      <section id="aside">
+        <img src="./images/meback.jpg" alt="" />
+      </section>
 
-        <footer id="main-footer">
-            <p>Copyright &copy;2020 by Ricky A</p>
-        </footer>
-
+      <footer id="main-footer">
+        <p>Copyright &copy;2020 by Ricky A</p>
+      </footer>
     </div>
-    
-</body>
+  </body>
 </html>
