--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="grid-container">
       <div id="logo">
-        <h1></h1>
+        <h1>Logo.</h1>
       </div>
       <nav id="navbar">
         <ul>
@@ -21,6 +21,11 @@
       <div id="pin"></div>
       <section id="main">
         <h1>Hero</h1>
+        <span>r</span>
+        <span>r</span>
+        <span>r</span>
+        <span>r</span>
+        <span>r</span>
       </section>
       <section id="aside">
         <img src="./images/meback.jpg" alt="" />
@@ -30,5 +35,6 @@
         <p>Copyright &copy;2020 by Ricky A</p>
       </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
